Work on more style for CI post_detail.html file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -552,6 +552,11 @@ a.nav-link {
         height: 250px;
     }
 
+    /* POST DETAILS */
+
+    #post-detail-body {
+        padding-top: 75px;    
+    }
 
 
 }
