--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -57,7 +57,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8 card mb-4  mt-3 ">
+        <div class="col-12 card mb-4  mt-3 ">
             <h3>Comments:</h3>
             <div class="card-body">
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
@@ -78,7 +78,7 @@ on December 20th, 2021; later modified on December23rd, 2021 at 15:20.
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-4 card mb-4  mt-3 ">
+        <div class="col-12 card mb-4  mt-3 ">
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
