--- a/templates/weather.html
+++ b/templates/weather.html
@@ -12,65 +12,65 @@
 
                 
                 <div class="row">
-                    <div id="weather-data-title" class="col-12"><p>Coordinates for Weather Data</p></div>
-                    <div id="latitute-title" class="col-12 col-sm-6 col-md-3"><p>Latitude</p></div>
-                    <div id="latitude" class="col-12 col-sm-6 col-md-3"></div>
-                    <div id="longitude-title" class="col-12 col-sm-6 col-md-3"><p>Longitude</p></div>
-                    <div id="longitude" class="col-12 col-sm-6 col-md-3"></div>
-                    <div id="enter-manually-title" class="col-12"><p>Manual Input of Coordinates</p></div>
-                    <div id="manual-latitute-label" class="col-12 col-sm-6 col-md-3">
+                    <div id="weather-data-title" class="col-12 weather-data-label"><p>Coordinates for Weather Data</p></div>
+                    <div id="latitute-title" class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Latitude</p></div>
+                    <div id="latitude" class="col-12 col-sm-6 col-md-3 weather-data-value"></div>
+                    <div id="longitude-title" class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Longitude</p></div>
+                    <div id="longitude" class="col-12 col-sm-6 col-md-3 weather-data-value"></div>
+                    <div id="enter-manually-title" class="col-12 weather-data-label"><p>Manual Input of Coordinates</p></div>
+                    <div id="manual-latitude-label" class="col-12 col-sm-6 col-md-3 weather-data-label">
                         <label for="latitude-input" id="label-for-latitude">Latitude</label>
                     </div>
-                    <div id="manual-latitute" class="col-12 col-sm-6 col-md-3">
+                    <div id="manual-latitude" class="col-12 col-sm-6 col-md-3 weather-data-value">
                         <input id="latitude-input" type="number">
                     </div>
-                    <div id="manual-longitude-label" class="col-12 col-sm-6 col-md-3">
+                    <div id="manual-longitude-label" class="col-12 col-sm-6 col-md-3 weather-data-label">
                         <label for="longitude-input" id="label-for-longitude">Longitude</label>
                     </div>                    
-                    <div id="manual-longitude" class="col-12 col-sm-6 col-md-3">
+                    <div id="manual-longitude" class="col-12 col-sm-6 col-md-3 weather-data-value">
                         <input id="longitude-input" type="number">
                     </div>
                     <div id="get-weather-data" class="col-12">
                         <button id="get-weather-data-button" type="submit">Get Data</button>
                     </div>
-                    <div id="results-title" class="col-12"><p>Weather Data</p></div>
+                    <div id="results-title" class="col-12 weather-data-label"><p>Weather Data</p></div>
                     <!-- Weather Data -->
                     
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Wind Speed</p></div>                                       
-                    <div id="value-wind" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-wind" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Direction</p></div>
-                    <div id="value-wind-direction" class="col-12 col-sm-6 col-md-3"><p></div>
+                    <div id="value-wind-direction" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temperature</p></div>
-                    <div id="value-temperature" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-temperature" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Feels Like</p></div>
-                    <div id="value-feels-like" class="col-12 col-sm-6 col-md-3"><p></p></div>
-                    <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temperature Max</p></div>
-                    <div id="value-temperature-max" class="col-12 col-sm-6 col-md-3"><p></p></div>
-                    <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temperature Min</p></div>
-                    <div id="value-temperature-min" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-feels-like" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
+                    <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temp. Max</p></div>
+                    <div id="value-temperature-max" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
+                    <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Temp. Min</p></div>
+                    <div id="value-temperature-min" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Pressure</p></div>
-                    <div id="value-pressure" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-pressure" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Humidity</p></div>
-                    <div id="value-humidity" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-humidity" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Visibitily</p></div>
-                    <div id="value-visibility" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-visibility" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Sky</p></div>
-                    <div id="value-clouds" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-clouds" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Main</p></div>
-                    <div id="value-main" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-main" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Description</p></div>
-                    <div id="value-description" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-description" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Country</p></div>
-                    <div id="value-country" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-country" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Date</p></div>
-                    <div id="value-date" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-date" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Sunrise</p></div>
-                    <div id="value-sunrise" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-sunrise" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div class="col-12 col-sm-6 col-md-3 weather-data-label"><p>Sunset</p></div>
-                    <div id="value-sunset" class="col-12 col-sm-6 col-md-3"><p></p></div>
+                    <div id="value-sunset" class="col-12 col-sm-6 col-md-3 weather-data-value"><p></p></div>
                     <div id="send-weather-data" class="col-12">   
                     {% if user.is_authenticated %}   
-                    <button id="send-weather-data-button" type="submit">Send Data</button>
+                        <button id="send-weather-data-button" type="submit">Send Data</button>
                     {% else %}
                     <p>(Log in to send data to database)</p>
                     {% endif %}
@@ -80,23 +80,24 @@
                 </div>
             </div>       
         </section>
+        <hr>
     </div>
     <div class="container">
         <div id="select_data_options" class="row">            
             <div id="s-d-o-1" class="col-12 col-lg-2">
                 <input type="radio" id="5-days" name="records-to-display" value="5-last">
-                <label for="5-days">Last 5 days</label>
+                <label for="5-days" class="radio-label">Last 5 days</label>
             </div>
             <div id="s-d-o-2" class="col-12 col-lg-2">
                 <input type="radio" id="15-days" name="records-to-display" value="15-last">
-                <label for="15-days">Last 15 days</label>
+                <label for="15-days" class="radio-label">Last 15 days</label>
             </div>
             <div id="s-d-o-3" class="col-12 col-lg-4">
                 <input type="radio" id="all-data" name="records-to-display" value="all-data">
-                <label for="5-days">All data in table, last 30 days in chart</label>
+                <label for="5-days" class="radio-label">All data in table, last 30 days in chart</label>
             </div>
             <div id="s-d-o-4" class="col-12 col-lg-2">                    
-                <label for="s-d-o-list-1">Value 1</label>                  
+                <label for="s-d-o-list-1" class="radio-label">Value 1</label>                  
                 <select id="s-d-o-list-1" name="other-value-list-1" class="input-field">
                     <option value="pressure">Pressure</option>
                     <option value="humidity">Humidity</option>
@@ -120,6 +121,7 @@
                 </select>                                        
             </div>           
         </div>
+        <hr>
         <div id="weather_extra_info" class="row">
             <div id="chart-left" class="col-12 order-1 col-lg-4 order-lg-1">
                 <!-- Google Charts
@@ -139,9 +141,13 @@
                 Copied and modified from https://developers.google.com/chart/interactive/docs/gallery/linechart on January 5th, 2022, at 20:40. -->                
                 <div id="curve_chart_right"></div>
             </div>
-            <div id="wind-extra-info" class="col-12 order-2 col-lg-4 order-lg-4">                
+            
+            <div id="wind-extra-info" class="col-12 order-2 col-lg-4 order-lg-4">  
+                <hr>              
                 <table id="wind-table">
-                                                           
+                    <th>Date</th>
+                    <th>Wind Speed</th>
+                    <th>Wind Dir</th>                                     
                     {% for item in wind_data %}
                         <tr>
                             <td>{{ item.wind_rec_id.date }}</td>
@@ -154,7 +160,11 @@
             </div>
             
             <div id="temperature-extra-info" class="col-12 order-4 col-lg-4 order-lg-5">
-                <table>
+                <hr>
+                <table id="temperature-table">
+                    <th>Date</th>
+                    <th>Temperature</th>
+                    <th>Feels Like</th>   
                     {% for temp in temperature_data %}
                         <tr>
                             <td>{{ temp.temp_rec_id.date }}</td>
@@ -167,7 +177,11 @@
             </div>
             
             <div id="other-weather-extra-info" class="col-12 order-6 col-lg-4 order-lg-6">
-                <table>
+                <hr>
+                <table id="other-weather-table">
+                    <th>Date</th>
+                    <th>{{ other_weather_data.other }}</th>
+                    <th>{{ oother_weather_data.other }}</th>   
                     {% for other in other_weather_data %}
                         <tr>
                             <td>{{ other.0.date }}</td>
