--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                         </div>
                     </nav>
                 </div> 
-                <div id="log-in-button" class="col-12 col-sm-3 col-md-4 col-lg-5 " style="background-color: rgb(154, 165, 165);">
+                <div id="log-in-button-1" class="col-12 col-sm-3 col-md-4 col-lg-5">
                     <!-- Button trigger modal:
                     Credit: Bootstrap
                     Code copied on December 7th, 2021, 08:34 from https://getbootstrap.com/docs/4.0/components/modal/
@@ -77,14 +77,14 @@
                     {% else %}
                     
                     <div class="row"> 
-                            <div id="log-in-button" class="col-6 col-sm-6 col-md-6 col-lg-6 ">
+                            <div id="log-in-button-2" class="col-6 col-sm-6 col-md-6 col-lg-6">
                                 <button type="button" class="btn btn-primary" onclick="window.location.href='{% url 'account_login' %}';">
                                     Log In
                                 </button> 
                             </div>
                         
                         
-                            <div id="log-in-button" class="col-6 col-sm-6 col-md-6 col-lg-6 ">             
+                            <div id="log-in-button-3" class="col-6 col-sm-6 col-md-6 col-lg-6">             
                                 <button type="submit" class="btn btn-primary" onclick="window.location.href='{% url 'account_signup' %}';">
                                     Sign Up
                                 </button>
