--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
     <div id="body-content" class="container">
         <section id="instructions-title" class="row">
             <div class="col-12">            
-                <h2 class="h2-titles">Instructions to use this website</h2>
+                <h1 class="h2-titles">Instructions to use this site</h1>
                 <div>
-                    <h3>Subtitle</h3>
+                    <h3>Get weather data, open a discussion or ticket, contact us</h3>
                     <p>
-                        Instructions here asdfasdfdfasdflaksj as sdkfjsldkfjlasdkfd
+                        Follow the simple steps below to keep organization and planning unified.
                     </p>
                 </div>            
             </div>
@@ -21,7 +21,54 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
         <hr>
         <section class="row">   
             <div class="col-12">
-                <h2 class="h2-titles">Follow these steps to use the weather data</h2>
+                <h2 class="h2-titles">Weather Page</h2>
+            </div>          
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 1</h3>
+                <p>Log in to send data to the database, otherwise you can only read weather data.</p>
+                <img class="instructions-image" src="static/images/instructions-log-in.PNG">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 2</h3>
+                <p>Zoom to the area of interest in the map.</p>
+                <img class="instructions-image" src="static/images/instructions-map.PNG">
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 3</h3>
+                <p>Pick location on map where you want to get the weather data.</p>
+                <img class="instructions-image" src="static/images/instructions-map.PNG">
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 4</h3>
+                <p>Alternatively, enter the desired location coordiantes manually.</p>
+                <img class="instructions-image" src="static/images/instructions-manual-coordinates-1.PNG">
+                <img class="instructions-image" src="static/images/instructions-manual-coordinates-2.PNG">
+                <img class="instructions-image" src="static/images/instructions-manual-coordinates-3.PNG">
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 5</h3>
+                <p>Pres "Get the weather data."</p>
+                <img class="instructions-image" src="static/images/instructions-get-data.PNG">
+            </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 6</h3>
+                <p>Pres "Send the weather data to the database. This option is disabled if you are not logged in."</p>
+                <img class="instructions-image" src="static/images/instructions-send-data.PNG">
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 7</h3>
+                <p>Visualize data selecting 5, 15 or all records. First set (left) accounts for wind data, second one (middle) for temperature. Select which two other parameters to show in third set (right).</p>
+                <img class="instructions-image" src="static/images/instructions-visualize-data.png">
+            </div> 
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+                <h3>Step 8</h3>
+                <p>Inspect, analize data. They are saved in the database when sending the data.</p>
+            </div>        
+        </section>
+        <hr>
+        <section class="row">   
+            <div class="col-12">
+                <h2 class="h2-titles">Blog Page</h2>
             </div>          
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 1</h3>
@@ -29,7 +76,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 2</h3>
-                <p>Zoom to area of interes sdfsd fasd fsewe wefwe fwefasdf sd fsdfes fwefwefwefw efwef wef wefwe fwe fe </p>
+                <p>Zoom to area of interes</p>
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 3</h3>
@@ -43,19 +90,11 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
                 <h3>Step 5</h3>
                 <p>Visualize data</p>
             </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 6</h3>
-                <p>Analize data</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 7</h3>
-                <p>Save data</p>
-            </div>        
         </section>
         <hr>
         <section class="row">   
             <div class="col-12">
-                <h2 class="h2-titles">Follow these steps to use the weather data</h2>
+                <h2 class="h2-titles">Contact Page</h2>
             </div>          
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 1</h3>
