--- a/templates/index.html
+++ b/templates/index.html
@@ -72,24 +72,17 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div>          
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 1</h3>
-                <p>Log in</p>
+                <p>Log in to create a discussion or ticket, or to add comments to them. If not logged in, you can only read the blogs.</p>
+                <img class="instructions-image" src="static/images/instructions-log-in.PNG">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 2</h3>
-                <p>Zoom to area of interes</p>
+                <p>Select the topic which your concern is related to.</p>
             </div> 
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 3</h3>
-                <p>Pick exact location</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 4</h3>
-                <p>Pres "Get Data"</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 5</h3>
-                <p>Visualize data</p>
-            </div> 
+                <p>Access last information and/or add comments until the ticket or discussion is closed.</p>
+            </div>
         </section>
         <hr>
         <section class="row">   
@@ -98,24 +91,13 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
             </div>          
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 1</h3>
-                <p>Log in</p>
+                <p>Log in to contact us.</p>
+                <img class="instructions-image" src="static/images/instructions-log-in.PNG">
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
                 <h3>Step 2</h3>
-                <p>Zoom to area of interes</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 3</h3>
-                <p>Pick exact location</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 4</h3>
-                <p>Pres "Get Data"</p>
-            </div> 
-            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                <h3>Step 5</h3>
-                <p>Visualize data</p>
-            </div> 
+                <p>Fill in your details and text you want to send.</p>
+            </div>
         </section>
     </div>
     <!-- /.Instructions -->    
