--- a/templates/blog.html
+++ b/templates/blog.html
@@ -12,7 +12,7 @@ Code copied from Code Institute "I Think Therefore I Blog" project,
 
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
-            <div class="row">
+            <div class="row" id="blog-content">
                 {% for post in post_list %}
                 <div class="col-md-4">
                     <div id="post-box" class="card mb-4">
