--- a/static/css/style.css
+++ b/static/css/style.css
@@ -137,7 +137,8 @@ https://stackoverflow.com/questions/10636667/bootstrap-modal-appearing-under-bac
 #recipient-name-submit {
     background-color: rgb(49, 49, 48);
     font-family: 'Heebo', sans-serif;
-    color: white;
+    color: rgb(49, 49, 48);
+    
 }
 
 
@@ -145,8 +146,10 @@ https://stackoverflow.com/questions/10636667/bootstrap-modal-appearing-under-bac
 
 #body > div > div:nth-child(1) > div > p {
     margin-top: 50px;
-    font-family: 'Oxygen', sans-serif;
+    font-family: 'Heebo', sans-serif;
     margin-bottom: 50px;
+    color: rgb(49, 49, 48);
+    font-size: 150%;
 }
 
 #signup_form, #body > div > div:nth-child(2) > div > form {
@@ -156,6 +159,8 @@ https://stackoverflow.com/questions/10636667/bootstrap-modal-appearing-under-bac
 #body > div > div:nth-child(2) > div {
     margin-bottom: 175px;
 }
+
+
 
 
 /* FOOTER */
@@ -585,9 +590,31 @@ td {
 }
 
 
+/* ************** */
+/* THANK YOU PAGE */
+/* ************** */
 
+#thanks-div-1 {
+    margin-top: 150px;
+    color: rgb(98, 88, 184);
+}
 
+#thanks-div-3 {
+    margin-bottom: 245px;
+}
 
+#thanks-div-1 > div > div > p {
+    font-family: 'Heebo', sans-serif;
+    font-size: 200%;
+    font-weight: bold;
+    color: rgb(98, 88, 184);
+}
+
+#thanks-div-2 > div > div > p, #thanks-div-3 > div > div > p {
+    font-family: 'Heebo', sans-serif;
+    font-size: 150%;
+    color: rgb(49, 49, 48);
+}
 
 
 /* ************* */
