--- a/templates/base.html
+++ b/templates/base.html
@@ -72,14 +72,14 @@
 
                     {% if user.is_authenticated %}                    
                     <button type="button" class="btn btn-primary" onclick="window.location.href='{% url 'account_logout' %}';">
-                        Log Out
+                        Sign Out
                     </button>
                     {% else %}
                     
                     <div class="row"> 
                             <div id="log-in-button-2" class="col-6 col-sm-6 col-md-6 col-lg-6">
                                 <button type="button" class="btn btn-primary" onclick="window.location.href='{% url 'account_login' %}';">
-                                    Log In
+                                    Sign In
                                 </button> 
                             </div>
                         
